fixed end game